<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.inclass.mad.inclassassgn03.DisplayActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblTxtViewStdInfo"
        android:id="@+id/txtViewStdInfo"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtViewStdInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblTxtViewName"
                android:id="@+id/txtViewName"
                android:layout_column="0"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/txtViewNameValue"
                android:layout_column="1"
                android:maxWidth="160dp"
                android:minWidth="160dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnEdtName"
                android:layout_column="2"
                android:onClick="editName"
                android:clickable="true"
                android:background="@drawable/ic_action_edit"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblTxtViewEmail"
                android:id="@+id/txtViewEmail"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/txtViewEmailValue"
                android:layout_column="1"
                android:maxWidth="160dp"
                android:minWidth="160dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnEdtEmail"
                android:layout_column="2"
                android:onClick="editEmail"
                android:background="@drawable/ic_action_edit"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblTxtViewDepartment"
                android:id="@+id/txtViewDepartment"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/txtViewDepartmentValue"
                android:layout_column="1"
                android:maxWidth="160dp"
                android:minWidth="160dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnEdtDepartment"
                android:layout_column="2"
                android:onClick="editDepartment"
                android:background="@drawable/ic_action_edit"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblTxtViewMood"
                android:id="@+id/txtViewMood"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/txtViewMoodValue"
                android:layout_column="1"
                android:maxWidth="160dp"
                android:minWidth="160dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnEdtMood"
                android:layout_column="2"
                android:onClick="editMood"
                android:background="@drawable/ic_action_edit"/>
        </TableRow>
    </TableLayout>


</RelativeLayout>
